# UXRay

./: .env.local.example  .gitattributes  .gitignore  README.md  design.md  fetchAgents.md  handoff.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  uxray_handoff_template.md  uxray_prd_with_handoff.md
apps/api/: requirements.txt
apps/api/app/: __init__.py  auth.py  config.py  db.py  main.py  schemas.py
apps/api/data/: uxray.db-shm  uxray.db-wal
apps/api/scripts/: run_live_repo_smoke.py
apps/api/tests/: conftest.py  test_analyzer.py  test_api.py  test_browser_use_adapter.py  test_db.py  (+6 more)
apps/fetch/: .env.example  HOSTED_SETUP.md  README.md  pyproject.toml  run_relay.py
apps/fetch/hosted_templates/: README.md  boss_agent.py  custom_audience_agent.py  first_time_visitor_agent.py  intent_driven_agent.py  issue_packet_example.json  orchestrator_agent.py  synthesis_agent.py  trust_evaluator_agent.py
apps/fetch/tests/: test_logic.py  test_relay.py
apps/fetch/uxray_fetch/: __init__.py  agent_messages.py  compat.py  config.py  events.py  logic.py  models.py  relay.py  relay_agent.py  runtime_registry.py
apps/fetch/uxray_fetch/agents/: __init__.py  audience.py  boss.py  orchestrator.py  synthesis.py
apps/fetch/uxray_fetch/runners/: __init__.py  run_boss.py  run_custom_audience.py  run_first_time_visitor.py  run_intent_driven.py  run_orchestrator.py  run_synthesis.py  run_trust_evaluator.py
apps/web/: middleware.ts  next.config.ts  package.json  tailwind.config.ts  vitest.config.ts
supabase/sql/: public_artifacts_bucket.sql  user_owned_projects_runs.sql
(+53 files in other folders)
